--- a/rtc-remote-client-master/index.html
+++ b/rtc-remote-client-master/index.html
@@ -44,7 +44,7 @@
             }
 
             // 시그널링 서버 -> Socket.io
-            socket = io.connect('http://172.30.1.29:5004');
+            socket = io.connect('http://13.125.231.93:5004');
 
             // Socket Room Join
             socket.emit("join-master", room);
@@ -158,6 +158,11 @@
                     
                 });
                
+                // myStream = await navigator.mediaDevices.getDisplayMedia({
+                //     video: { 
+                //         displaySurface: 'window' 
+                //     } 
+                // })
                 myFace.srcObject = myStream;
 
             } catch (e) {
